[FLINK-34223][dist] Introduce a migration tool to transfer legacy config file to new config file.